# vibe-kanban

./: Cargo.toml  package.json  pnpm-lock.yaml
frontend/: package.json
frontend/src/: main.tsx
frontend/src/lib/: tauri-adapter.ts
scripts/: prepare-tauri-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
