[package]
name = "vibe-kanban-desktop"
version = "0.1.0"
description = "Vibe Kanban Desktop"
authors = ["Bloop"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
